<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/acproductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color3"
            android:fontFamily="@font/philosopher_bold"
            android:padding="3dp"
            android:text="PRODUCTOS"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txt_codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/philosopher"
                    android:ems="10"
                    android:hint="@string/txt_codigo"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txt_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/philosopher"
                    android:ems="10"
                    android:hint="@string/txt_descripcion"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

                <EditText
                    android:id="@+id/txt_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/philosopher"
                    android:ems="10"
                    android:hint="@string/txt_precio"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/philosopher"
                    android:onClick="Registrar"
                    android:text="@string/BotonRegistrar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_precio" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/philosopher"
                    android:onClick="Buscar"
                    android:text="@string/BotonBuscar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/philosopher"
                    android:layout_marginTop="40dp"
                    android:onClick="Modificar"
                    android:text="@string/BotonModificar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/philosopher"
                    android:layout_marginTop="44dp"
                    android:onClick="Eliminar"
                    android:text="@string/BotonEliminar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>